--- a/hw6/templates/header.html
+++ b/hw6/templates/header.html
@@ -2,7 +2,7 @@
     <header>
         <nav style="display: flex; align-items: center; background-color: #333; padding: 10px;">
             <div class="logo">
-                <a href="https://github.com/sc0210/3311_Lab6_student.git">
+                <a href="https://github.com/jhihyawang/rasberrypi4_esp32_dht11">
                     <img src="static/logo.png" alt="HW6" width="30" height="30">
                 </a>
             </div>
