--- a/hw6/templates/footer.html
+++ b/hw6/templates/footer.html
@@ -2,7 +2,7 @@
 <div class="footer-container">
 
     <footer>
-        <p style="font-size: 12pt;">&copy; 4110029009 王致雅</p>
+        <a href="https://github.com/jhihyawang/rasberrypi4_esp32_dht11" >&copy; 4110029009 王致雅</a>
     </footer>
 
 </div>
